<resources>
    <string name="app_name">Proyecto-Tienda-Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_productos">Productos</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_config">Cuenta</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_estadisticas">Estadisticas</string>

    <string name="usuario_login">Usuario</string>
    <string name="contraseña_login">Contraseña</string>
    <string name="entrar_btn">Entrar</string>
    <string name="detalle_envio">Detalles del Envio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_button">No tienes cuenta aun? <b>Registrate aqui</b></string>
</resources>