<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_ventas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_ventas" />

        <item android:title="Cuenta">
        <menu>

            <item
                android:id="@+id/nav_cuenta"
                        android:icon="@drawable/user"
                android:title="@string/menu_config">
            </item>
            <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/logout"
            android:title="@string/menu_salir">
            </item>

        </menu>
        </item>

    </group>
</menu>