<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_productos"
        android:name="com.example.proyecto_tienda_android.ui.productos.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />

    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.example.proyecto_tienda_android.ui.pedidos.PedidosFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_pedidos" />

    <fragment
        android:id="@+id/nav_ventas"
        android:name="com.example.proyecto_tienda_android.ui.ventas.VentasFragment"
        android:label="@string/menu_ventas"
        tools:layout="@layout/fragment_ventas" />
</navigation>